Prevent elements from collapsing in editor

--- a/editor-style.css
+++ b/editor-style.css
@@ -68,3 +68,6 @@ img {
   -webkit-transition: all 0.2s ease-in-out;
           transition: all 0.2s ease-in-out;
 }
+.collapse {
+  display: block;
+}
